[package]
name = "burner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
flate2 = "1.1.5"
hex = "0.4.3"
libc = "0.2.177"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tempfile = "3.23.0"
tiny_http = "0.12.0"
ureq = { version = "2.12.1", features = ["json"] }
url = "2.5.7"
urlencoding = "2.1.3"
